--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<title>婷婷❤小公举</title>
+<title>ManLing♥Laopo</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/index.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="js/jquery.js"></script>
